path name updated

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="container mx-auto">
             <div class="flex justify-between items-center">
                 <div class="flex gap-2 items-center">
-                    <img src="/src/assets/Reddit - jpeg.png" alt="">
+                    <img src="assets/Reddit - jpeg.png" alt="">
                     <h1 class="uppercase font-bold text-3xl">bvk i <span class="text-green-500">business</span></h1>
                 </div>
                 <div class="">
@@ -124,7 +124,7 @@
                     <a href="" class="lg:button button-sm">read more</a>
                 </div>
                 <div class="lg:w-[48%]">
-                    <img class="lg:mt-0 mt-5 w-full lg:h-[500px] object-cover" src="/src/assets/about.png" alt="">
+                    <img class="lg:mt-0 mt-5 w-full lg:h-[500px] object-cover" src="assets/about.png" alt="">
                 </div>
             </div>
         </div>
@@ -139,21 +139,21 @@
                 </div>
                 <div class="flex gap-2">
                     <div class="w-1/2">
-                        <img src="/src/assets/port1.png" alt="">
+                        <img src="assets/port1.png" alt="">
                     </div>
                     <div class="w-1/2">
                         <div class="mb-3">
                             <div class="">
-                                <img src="/src/assets/port2.png" alt="">
+                                <img src="assets/port2.png" alt="">
                             </div>
                         </div>
                         <div class="">
                             <div class="flex gap-2">'
                                 <div class="">
-                                    <img class="" src="/src/assets/port3.png" alt="">
+                                    <img class="" src="assets/port3.png" alt="">
                                 </div>
                                 <div class="">
-                                    <img class="" src="/src/assets/port4.png" alt="">
+                                    <img class="" src="assets/port4.png" alt="">
                                 </div>
                             </div>
                         </div>
@@ -189,21 +189,21 @@
                                 <ul>
                                     <li>
                                         <div class="flex items-center gap-1">
-                                            <img src="/src/assets/list.png" alt="">
+                                            <img src="assets/list.png" alt="">
                                             <p class="capitalize text-sm">creative design enabled</p>
                                         </div>
 
                                     </li>
                                     <li>
                                         <div class="flex items-center gap-1">
-                                            <img src="/src/assets/list.png" alt="">
+                                            <img src="assets/list.png" alt="">
                                             <p class="capitalize text-sm">vibrant color usage</p>
                                         </div>
 
                                     </li>
                                     <li>
                                         <div class="flex items-center gap-1">
-                                            <img src="/src/assets/list.png" alt="">
+                                            <img src="assets/list.png" alt="">
                                             <p class="capitalize text-sm">eye catching design</p>
                                         </div>
 
@@ -217,14 +217,14 @@
                                 <ul>
                                     <li>
                                         <div class="flex items-center gap-1">
-                                            <img src="/src/assets/list.png" alt="">
+                                            <img src="assets/list.png" alt="">
                                             <p class="capitalize text-sm">creative design enabled</p>
                                         </div>
 
                                     </li>
                                     <li>
                                         <div class="flex items-center gap-1">
-                                            <img src="/src/assets/list.png" alt="">
+                                            <img src="assets/list.png" alt="">
                                             <p class="capitalize text-sm">vibrant color usage</p>
                                         </div>
 
@@ -253,21 +253,21 @@
                                 <ul>
                                     <li>
                                         <div class="flex items-center gap-1">
-                                            <img src="/src/assets/list.png" alt="">
+                                            <img src="assets/list.png" alt="">
                                             <p class="capitalize text-sm">creative design enabled</p>
                                         </div>
 
                                     </li>
                                     <li>
                                         <div class="flex items-center gap-1">
-                                            <img src="/src/assets/list.png" alt="">
+                                            <img src="assets/list.png" alt="">
                                             <p class="capitalize text-sm">vibrant color usage</p>
                                         </div>
 
                                     </li>
                                     <li>
                                         <div class="flex items-center gap-1">
-                                            <img src="/src/assets/list.png" alt="">
+                                            <img src="assets/list.png" alt="">
                                             <p class="capitalize text-sm">eye catching design</p>
                                         </div>
 
@@ -281,14 +281,14 @@
                                 <ul>
                                     <li>
                                         <div class="flex items-center gap-1">
-                                            <img src="/src/assets/list.png" alt="">
+                                            <img src="assets/list.png" alt="">
                                             <p class="capitalize text-sm">creative design enabled</p>
                                         </div>
 
                                     </li>
                                     <li>
                                         <div class="flex items-center gap-1">
-                                            <img src="/src/assets/list.png" alt="">
+                                            <img src="assets/list.png" alt="">
                                             <p class="capitalize text-sm">vibrant color usage</p>
                                         </div>
 
@@ -317,21 +317,21 @@
                                 <ul>
                                     <li>
                                         <div class="flex items-center gap-1">
-                                            <img src="/src/assets/list.png" alt="">
+                                            <img src="assets/list.png" alt="">
                                             <p class="capitalize text-sm">creative design enabled</p>
                                         </div>
 
                                     </li>
                                     <li>
                                         <div class="flex items-center gap-1">
-                                            <img src="/src/assets/list.png" alt="">
+                                            <img src="assets/list.png" alt="">
                                             <p class="capitalize text-sm">vibrant color usage</p>
                                         </div>
 
                                     </li>
                                     <li>
                                         <div class="flex items-center gap-1">
-                                            <img src="/src/assets/list.png" alt="">
+                                            <img src="assets/list.png" alt="">
                                             <p class="capitalize text-sm">eye catching design</p>
                                         </div>
 
@@ -345,14 +345,14 @@
                                 <ul>
                                     <li>
                                         <div class="flex items-center gap-1">
-                                            <img src="/src/assets/list.png" alt="">
+                                            <img src="assets/list.png" alt="">
                                             <p class="capitalize text-sm">creative design enabled</p>
                                         </div>
 
                                     </li>
                                     <li>
                                         <div class="flex items-center gap-1">
-                                            <img src="/src/assets/list.png" alt="">
+                                            <img src="assets/list.png" alt="">
                                             <p class="capitalize text-sm">vibrant color usage</p>
                                         </div>
 
@@ -386,7 +386,7 @@
                     <h4 class="text-gray-400 font-bold">DESIGNER</h4>
                 </div>
                 <div class="">
-                    <img class="w-[700px]" src="/src/assets/Frame 49.png" alt="">
+                    <img class="w-[700px]" src="assets/Frame 49.png" alt="">
                 </div>
             </div>
         </div>
@@ -400,16 +400,16 @@
             </div>
             <div class="lg:flex justify-between gap-5 px-5">
                 <div class="lg:mb-0 mb-5">
-                    <img src="/src/assets/Frame 56.png" alt="">
+                    <img src="assets/Frame 56.png" alt="">
                 </div>
                 <div class="lg:mb-0 mb-5">
-                    <img src="/src/assets/Frame 57.png" alt="">
+                    <img src="assets/Frame 57.png" alt="">
                 </div>
                 <div class="lg:mb-0 mb-5">
-                    <img src="/src/assets/Frame 58.png" alt="">
+                    <img src="assets/Frame 58.png" alt="">
                 </div>
                 <div class="lg:mb-0 mb-5">
-                    <img src="/src/assets/Frame 59.png" alt="">
+                    <img src="assets/Frame 59.png" alt="">
                 </div>
 
             </div>
@@ -434,7 +434,7 @@
             <div class="lg:flex justify-between items-start">
                 <div class="lg:w-[23%]">
                     <div class="flex gap-1 items-center text-2xl font-bold pb-5">
-                        <img src="/src/assets/Reddit - jpeg.png" alt="">
+                        <img src="assets/Reddit - jpeg.png" alt="">
                         <h1 class="uppercase text-white">philox i <span class="text-green-500">business</span></h1>
                     </div>
                     <p class="headl py-3">
